/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'io.freefair.lombok' version '6.5.0.2'
    id 'com.bmuschko.docker-spring-boot-application' version '8.1.0'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "$nexusUrl/repository/maven-gostream-utils"
        credentials{
            username nexusUsername
            password nexusPassword
        }
    }
}

dependencies {
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.springframework.security:spring-security-messaging'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
    implementation 'io.nats:jnats:2.15.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.postgresql:postgresql'
    implementation 'ru.geosteering:common-models:1.14.0'
    implementation 'ru.geosteering:witsml-library:1.1.10'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

group = 'ru.geosteering'
version = '1.0.1'
description = 'goperform-cache'
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

docker {
    springBootApplication {
        baseImage = "eclipse-temurin:17-jre-alpine"
        ports = [9010]
        images = ["$dockerTargetRegistryUrl/gostream/goperform-cache-service:latest"]
    }
}
